horizontal overflow bug fixed

--- a/src/components/footer/index.scss
+++ b/src/components/footer/index.scss
@@ -2,6 +2,7 @@
 
 #footer {
   background-color: $dark-blue;
+  width: 100%;
   .main_footer {
     display: flex;
     flex-wrap: wrap;
