--- a/src/components/navBar/index.scss
+++ b/src/components/navBar/index.scss
@@ -9,7 +9,7 @@
   position: sticky;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   background-color: $white;
   @include tab2{
     padding: 1rem clamp(2rem, 8%, 7rem) 1rem clamp(2rem, 8%, 7rem);
@@ -17,6 +17,9 @@
 
   .logo {
     width: 25%;
+    @include tab2{
+      width: 100%;
+    }
     a {
       display: flex;
       align-items: center;
