--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,10 @@
 @use "./sass/index" as *;
-* {
+
+*, *::before, *::after {
   box-sizing: border-box;
+}
+
+* {
   margin: 0;
   padding: 0;
   outline: none;
